Correction 2 de couleur de contraste

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: #575757;
+    color: #3C3C3C;
 }
 
 .d-bloc button:hover {
@@ -786,7 +786,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #575757!important;
+    color: #3C3C3C!important;
 }
 
 .btn-atomic-tangerine:hover {
